Changes since last release:

VERSION 0.5.xx
DATE xx/xx/20xx
33rd Alpha Release

NEWS:


NEW: [features/improvements]
+What items are displayed in the Lexer menu are now configurable.
+Basic support for highlighting asp script embedded in html files.
+New version of Launch plugin with some bug fixes.
+Add Close Others option to right click tab menu to close all but the selected tab.

LIBRARY:
+New plugin interface for adding autocompletion providers added (iface.AutocompI)

BUG FIXES:
+Fix some minor vhdl highlighting issues.
+Fix exception that could occur when syntax highlighting extensions are removed.
+Fix issue where autocomp/callip popups would not get hidden when they should.
+Fix issue where window could be restored off screen when extra displays have
been removed from the system between running the program.
+Fix issue where tab label would incorrectly show a modified state after loading
a large file in incremental mode.

#-----------------------------------------------------------------------------#

VERSION 0.5.32
DATE 12/28/2009
32nd Alpha Release

NEWS:

Another quick bug fix release to address some critical issues that were still
present after the last release.

BUG FIXES:
+Fix error introduced into extended autocomp in previous release.
+Handle win32api errors from calls to GetLongPathName.
+Restore html/xml autocomp behavior to put cursor between tags that are inserted.
+Fix issue with custom key profiles being saved to system directory instead of
 user config directory.

#-----------------------------------------------------------------------------#

VERSION 0.5.30
DATE 12/21/2009
31st Alpha Release

NEWS:

Quick bug fix release for some issues that arose after the last release.

BUG FIXES:
+Fix Unicode handling for file names when opening files from the command line.
+Fix bug in not properly shutting down ipc server on exit app event.
+Fix bug in not automatically continuing with the window closure when a modified
file action takes place.